--- a/前端学习准备.md
+++ b/前端学习准备.md
@@ -2,10 +2,10 @@
 2018.04.24|用时|前端学习准备|达成
 ---
 <!-- 学的哪些比较透彻，说说自己的理解 -->
-###前端学习准备：
-
+### 前端学习准备：
 - Markdown语法
-用来写笔记，支持代码段，简易上手，操作方便。[younghz的Markdown库](https:://github.com/younghz/Markdown "Markdown")
+用来写笔记，支持代码段，简易上手，操作方便。
+[younghz的Markdown库](https:://github.com/younghz/Markdown "Markdown")
 
 - github的使用
 注册github账号，登陆后会有如何创建`库`的介绍
@@ -21,42 +21,39 @@
 `git reflog`或者`git log`查看`commit_id`
 `git push origin master`推送到远程仓库，master表示分支，可以换成其他分支
 一条龙操作：github上建新`库`，或`fork`一个，`clone`到本地，学习并修改，先`commit`然后`push`到远程仓库。
-![cheat Sheet](https://pic1.zhimg.com/v2-d65f30212ad48099391577064047ecdf_r.jpg)
+[Git cheat Sheet](https://pic1.zhimg.com/v2-d65f30212ad48099391577064047ecdf_r.jpg)
 
 - 连接远程仓库
 在本地创建SSH KEY，`$ ssh-keygen -t rsa -C "youremail@example.com"`一路回车，顺利创建的话，在安装git的目录里找到`.ssh`目录，`id_rsa`是私钥，`id_rsa.pub`是公钥，登陆Github-Account settings-SSH Keys-Add SSH Key，任意Title，在文本框中粘贴`id_rsa.pub`的内容。
 ![ssh](https://cdn.liaoxuefeng.com/cdn/files/attachments/001384908342205cc1234dfe1b541ff88b90b44b30360da000/0)
 然后在本地终端输入`$ ssh -T git@github.com`，可以验证是否连接成功，首次连接会有一个警告，输入yes并回车就不会有了
 设置一下username和email
-```
-$ git config --global user.name "your name"
-$ git config --global user.email "your_email@youremail.com"
-```
-如果你是clone到本地，此时应该可以push了，但是如果你是在github上建了空项目，本地有一个项目，想要关联在一起，需要添加远程地址`git remote add origin git@github.com:yourName/yourRepo.git`yourName是你的username，yourRepo是你的库的名字，自行替换
+    ```
+    $ git config --global user.name "your name"
+    $ git config --global user.email "your_email@youremail.com"
+添加远程地址，`git remote add origin git@github.com:yourName/yourRepo.git`yourName是你的username，yourRepo是你的库的名字，自行替换
 然后可以进行`git push origin master`的推送操作了
-
 
 ---
 <!-- 哪些了解了一些，还需要继续深入阅读 -->
-###需要后续了解
+### 需要后续了解
 - 了解到Emmet(前身zen Coding)，感觉是值得学习的工具，sublimetext中有插件，WebStorm自带集成
 
-语法：`后代：>`|`兄弟：+`|`上级：^`|`乘法：*`|`自增符号：$`($@-\*5=54321|$@3\*5=34567)
-	 `id：#id`|`类：.class`|`文本：{文本}`|
+    语法：`后代：>` | `兄弟：+` | `上级：^` | `乘法：*` | `自增符号：$` ($@-\*5=54321|$@3\*5=34567) | `id：#id` | `类：.class` | `文本：{文本}` |
 [官网Emmet文档](https://docs.emmet.io/cheat-sheet/)
 
 - 开发工具
 
 SublimeText3：我最开始使用ST3，轻量级，插件众多，上手有一定难度，如果有多台电脑，插件还得存下档，在公司电脑上我会用这个(跑不动webStorm)
 
-webStorm：重量级，占内存(非常)，适合新手，我也刚开始使用，内置git，Emmet比较方便
+webStorm：重量级，占内存(非常)，适合新手，我也刚开始使用，内置git，Emmet比较方便，我也还在摸索适应，但是就目前来看还是很不错的
 [WebStorm实用教程](https://www.jianshu.com/p/4ce97b360c13)
-我也还在摸索适应，但是就目前来看还是很不错的
+
 
 VisualStudioCode：还没有使用，等webStorm更熟练之后考虑更换
 
 ---
 <!-- 哪些学习了之后还有疑问，记录下问题，待解决 -->
-###git的分支管理
+### git的分支管理
 
 因为还没有用到暂时没有
