--- a/前端学习准备.md
+++ b/前端学习准备.md
@@ -3,7 +3,7 @@
 ---
 <!-- 学的哪些比较透彻，说说自己的理解 -->
 ### 前端学习准备：
-- Markdown语法
+- Markdown语法  
 用来写笔记，支持代码段，简易上手，操作方便  
 [younghz的Markdown库](https:://github.com/younghz/Markdown "Markdown")  
 
@@ -15,14 +15,14 @@
 
 - 使用git对本地项目的操作  
 在本地安装[git](https://git-scm.com/downloads)  
-不熟悉linx操作可以在需要进行git操作的文件中右键选择git bash here
+不熟悉linx操作可以在需要进行git操作的文件中右键选择git bash here  
 `git add <file>`如有新建文件add到本地仓库，没有这一步的操作是无法提交的  
 `git commit -m "描述"`提交到仓库，`commit`就像快照，一旦操作失误，可以从最近的`commit`中恢复  
 `git reset -hard HEAD^`回退到最近一次的版本，`HEAD^`表示最近一次版本，或者加`commit_id`  
 `git reflog`或者`git log`查看`commit_id`  
 `git push origin master`推送到远程仓库，master表示分支，可以换成其他分支  
-一条龙操作：github上建新`库`，或`fork`一个，`clone`到本地，学习并修改，先`commit`然后`push`到远程仓库  
-[Git cheat Sheet](https://pic1.zhimg.com/v2-d65f30212ad48099391577064047ecdf_r.jpg)  
+一条龙操作：github上建新`库`，或`fork`一个，`clone`到本地，先`add`，修改后`commit`然后`push`到远程仓库  
+[Git cheat Sheet命令小抄](https://pic1.zhimg.com/v2-d65f30212ad48099391577064047ecdf_r.jpg)  
 
 - 连接远程仓库  
 在本地创建SSH KEY，`$ ssh-keygen -t rsa -C "youremail@example.com"`一路回车，顺利创建的话，在安装git的目录里找到`.ssh`目录，`id_rsa`是私钥，`id_rsa.pub`是公钥，登陆Github-Account settings-SSH Keys-Add SSH Key，任意Title，在文本框中粘贴`id_rsa.pub`的内容  
