--- a/webDesignNotes/浮动和清除浮动.md
+++ b/webDesignNotes/浮动和清除浮动.md
@@ -84,6 +84,7 @@ display:table;
 /* For IE 6/7 (trigger hasLayout) */
 .cf { zoom:1; }
 ```
+在掌握这个结论的同时要理解，使用overflow或display等属性也可以创建BFC来闭合浮动
 #### 引申阅读
 [BFC和IE的hasLayout](http://www.cnblogs.com/pigtail/archive/2013/01/23/2871627.html)  
 [那些年我们一起清除过的浮动](http://www.iyunlu.com/view/css-xhtml/55.html)
