--- a/webDesignNotes/常用布局.md
+++ b/webDesignNotes/常用布局.md
@@ -4,4 +4,5 @@
 最常用方法，两列都设置左浮动或者一左一右，需注意当父容器没有设置高度时，需要清除浮动  
 #### 三列布局
 两侧定宽中间自适应
-    
+同样可以全部浮动，各自限定宽度  
+或者父容器position:relative，各列absolute,调整宽度和距离
